<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
		AIzaSyBs1DAaGuy8u2QnJGt6BfCqrBgJZuumyfw
	</string>
	<string name="facebook_app_id">
		1829187010684574
	</string>
    <string name="app_name">Validator</string>
    <string name="register">register</string>
    <string name="restaurant_details">restaurant details</string>
    <string name="collection_details">collection details</string>
    <string name="your_basket">your basket</string>
    <string name="your_order">your order</string>
    <string name="payment">payment</string>
    <string name="payment_complete">payment complete</string>
    <string name="thank_you">thank you!</string>
    <string name="your_account_is_almost_set_up">your account is almost set up</string>
    <string name="profile_percent_completed">profile is %s%% complete</string>
    <string name="error_undefined_server_exception">server error</string>
    <string name="error_internet_connection">the internet connection appears to be offline</string>
    <string name="error_database_error">database error. try to reinstall application</string>
    <string name="error_unknown_network_exception">unknown network exception</string>
    <string name="error_customer_empty_restart_app">customer information not available on device. please, restart app and try again</string>
    <string name="error_timeout">request timed out</string>
    <string name="no_result">no results</string>
    <string name="error_you_cant_order_in_this_site">you can\'t order in this store now.\nplease try another one.</string>
    <string name="ok" tools:ignore="ButtonCase,Typos">ok</string>
    <string name="btn_confirm">confirm</string>
    <string name="btn_register">next</string>
    <string name="i_already_have_an_account">i already have an account</string>
    <string name="hint_date_of_birth">date of birth</string>
    <string name="hint_choose_address">choose address</string>
    <string name="hint_building_name">street number / unit / building name</string>
    <string name="hint_street_name">street name</string>
    <string name="hint_suburb">suburb</string>
    <string name="sign_in">sign in</string>
    <string name="sign_in_login_hint">e-mail</string>
    <string name="sign_in_password_hint">password</string>
    <string name="sign_in_login_error">incorrect login</string>
    <string name="sign_in_password_error">incorrect email</string>
    <string name="sign_in_tittle">welcome to wagamama</string>
    <string name="forgot_your_password">forgot your password?</string>
    <string name="let_s_set_up_your_account">let\'s set up your account</string>
    <string name="by_registering_you_agree_to_our">by registering you agree to our</string>
    <string name="your_password_must_be">your password must be between 8 and 16 characters and must contain at least one number and one capital letter</string>
    <string name="terms_and_conditions">terms and conditions</string>
    <string name="sign_up_privacy_policy_template" formatted="false">by registering you agree you agree to our\n%s, %s,\n%s and to receive marketing communications from wagamama</string>
    <string name="please_fill_in_your_details">please fill in your details\nfor the latest news and offers</string>
    <string name="your_details">your details</string>
    <string name="choose_address">choose address</string>
    <string name="menu_section_home">home</string>
    <string name="menu_section_our_food">our food</string>
    <string name="menu_section_find_restaurant">find a restaurant</string>
    <string name="menu_section_order_take_out">order take-out</string>
    <string name="menu_section_eat_in_wagamama">eat in at wagamama</string>
    <string name="menu_section_my_rewards">my rewards</string>
    <string name="menu_section_profile">your details</string>
    <string name="menu_section_recents">recent orders</string>
    <string name="menu_section_settings">faq\'s</string>
    <string name="forgotten_password">forgotten password</string>
    <string name="please_enter_the_e_mail">please enter the e-mail address you used to register</string>
    <string name="an_email_has_been_sent">an email has been sent to you with your instructions to reset your password</string>
    <string name="enter_postcode_or_town">enter postcode or town</string>
    <string name="find_a_wagamama">find a wagamama</string>
    <string name="miles_away">miles away</string>
    <string name="more_details">more details</string>
    <string name="opening_times_template" formatted="false">%s %s - %s</string>
    <string name="select_location">select location</string>
    <string name="change_location">change location</string>
    <string name="selected">selected</string>
    <string name="home_pay_at_table_earn_loyalty_stars">pay at table + earn\nloyalty stars</string>
    <string name="home_host_or_join_a_table_and_pay_with_qkr">host or join a table and pay with qkr! to earn stars to play for food and drink</string>
    <string name="home_host_a_table">host a table</string>
    <string name="home_join_a_table">join a table</string>
    <string name="from_bowl_to_soul">from bowl to soul</string>
    <string name="staying_in_order_take_out">staying in?\norder take-out</string>
    <string name="fragment_our_food_product_tap_and_collect">tap and collect</string>
    <string name="fragment_our_food_product_product_not_available_change_location">change location</string>
    <string name="fragment_our_food_product_select_store">select</string>
    <string name="item_menu_section_text_view_title">fresh, lively food\n(with soul)</string>
    <string name="validate_account_dialog_title">validateType account</string>
    <string name="validate_account_dialog_first_text">thanks for registering, now validateType your registration by entering the pin that has been sent to your email, here</string>
    <string name="price_mask">%1$.2f</string>
    <string name="price_mask_int">%1$s</string>
    <string name="add_to_basket">add to basket</string>
    <string name="view_basket">view basket</string>
    <string name="view_order">view order</string>
    <string name="when_would_you_like_to_collect_your_order">when would you like to collect your order?</string>
    <string name="can_we_tempt_you">can we tempt you?</string>
    <string name="out_of_stock">out of stock</string>
    <string name="error_template_we_dont_have_this_products">we don\'t have any %s in stock right now so we can\'t add this to your order</string>
    <string name="pay_now">pay now</string>
    <string name="template_order_preview_total_error" formatted="false">%s order value is: %s</string>
    <string name="do_you_want_exit">do you really want to quit?</string>
    <string name="faq_url">http://www.wagamama.com/stars/faqs</string>
    <string name="privacy_policy_url">http://www.wagamama.com/privacy-policy</string>
    <string name="terms_and_conditions_url">http://www.wagamama.com/terms-and-conditions</string>
    <string name="official_rules_url">http://www.wagamama.com/official-rules</string>
    <string name="coming_soon">coming soon…</string>
    <string name="postcode">postcode</string>
    <string name="find_address">find address</string>
    <string name="please_wait">please wait…</string>
    <string name="save">save</string>
    <string name="error">error</string>
    <string name="sorry">sorry</string>
    <string name="password">password</string>
    <string name="e_mail">e-mail</string>
    <string name="confirm_password">confirm password</string>
    <string name="title">title</string>
    <string name="first_name">first name</string>
    <string name="surname">surname</string>
    <string name="gender">gender</string>
    <string name="mobile_number">mobile number</string>
    <string name="send">send</string>
    <string name="list">list</string>
    <string name="map">map</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="phone_template">phone: %s</string>
    <string name="opening_time">opening times</string>
    <string name="facilities">facilities</string>
    <string name="item_category_product_list_our_favorite">our favourite</string>
    <string name="we_need_permission">we need permission</string>
    <string name="description_location_permission">description location permission</string>
    <string name="please_select_restaurant">please select a restaurant</string>
    <string name="total">total</string>
    <string name="place_order">place order</string>
    <string name="welcome">welcome</string>
    <string name="btn_continue">continue</string>
    <string name="please_confirm_your_details">please confirm your details in case we need to contact you about your order</string>
    <string name="maximum">maximum</string>
    <string name="minimum">minimum</string>
    <string name="your_total">your total</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="please_try_again">please try again</string>
    <string name="fail_payment">sorry the transaction has not been processed as the payment has failed to complete.</string>
    <string name="take_out_payment_confirmation_thanks">thank you for your payment\nyou can see the order in %s and the receipt has been emailed to you</string>
    <string name="pat_hoster_payment_confirmation_thanks">payment success! thank you for hosting. you receipt has been emailed to you. you can view the order in %s and any stars you have earned in my rewards</string>
    <string name="pat_joiner_payment_confirmation_thanks">payment success! you receipt has been emailed to you. you can view the order in %s and any stars you have earned in my rewards</string>
    <string name="payment_confirmation_you_order_is_ready">your order will be ready for collection</string>
    <string name="at">at</string>
    <string name="view_receipt">view receipt</string>
    <string name="profile_profile">profile</string>
    <string name="profile_edit">edit</string>
    <string name="profile_name">name</string>
    <string name="hint_add_your_date_of_birth">add your date of birth</string>
    <string name="address">address</string>
    <string name="hint_add_your_address">add your address details</string>
    <string name="e_mail_address">e-mail address</string>
    <string name="e_mail_preferences">e-mail preferences</string>
    <string name="default_tip">default tip</string>
    <string name="logout">log out</string>
    <string name="edit_profile">edit profile</string>
    <string name="password_hint">********</string>
    <string name="email_preferences_false">not receive e-mail notifications</string>
    <string name="email_preferences">receive e-mail notifications</string>
    <string name="edit_address">edit address</string>
    <string name="edit_email">e-mail preferences</string>
    <string name="new_password">new password</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="edit_password">edit password</string>
    <string name="tip_enter_count_hint"> enter amount</string>
    <string name="edit_default_tip">edit default tip</string>
    <string name="current_password">current password</string>
    <string name="do_you_want_sign_out">do you really want to log out?</string>
    <string name="template_version">version %s</string>
    <string name="vat_reg">vat reg gb 681 4475 17</string>
    <string name="print">print</string>
    <string name="printing_is_not_available">printing is not available on your version of Android</string>
    <string name="share_image_chooser_title">share receipt…</string>
    <string name="receive_pin_by">receive pin by</string>
    <string name="text_message">text message</string>
    <string name="title_validate_account">validateType account</string>
    <string name="validate_account">your account has not yet been validated, %s to enter or request a pin</string>
</resources>